--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "discord.js": "^12.5.1",
     "dotenv": "^8.2.0",
+    "mongodb": "^3.6.4",
     "nekos.life": "^2.0.7",
     "node-cron": "^2.0.3"
   }
